--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8">
 </head>
 <body>
-    <h1> Hello World</h1>
-    <p>Nice to meet you all!</p>
-  
+    <div>
+        <div class="right-side-container">
+            <!-- About me section -->
+            <div class="about-me-section">
+                <h4 class="about-me-profession">Tehnician in prelucrarea lemnului</h4>
+                <h4 class="about-me-profession2nd">Izolator</h4>
+                <h4 class="about-me-profession3rd">Front-end Developer</h4>
+                <h1 class="about-me-name">Galan Ionut</h1>
+                <p class="about-me-description">Sunt chiar la inceput, nu am mai facut asa ceva pana acum.
+                   Dar as vrea sa incerc sa ma dezvolt, atat personal, 
+                   cat si profesional in acest program educational de dezvoltare in mediul IT. 
+                </p>
+            </div>
+        </div>
+    </div>
 </body>
+</html>
