--- a/index.html
+++ b/index.html
@@ -17,6 +17,94 @@
                    cat si profesional in acest program educational de dezvoltare in mediul IT. 
                 </p>
             </div>
+            <!-- projects section -->
+            <details class="details-projects">
+                <summary> 
+                    <span class="details-summary-projects">Projects and Future Projects</span>
+                </summary>
+                <div>
+                    <h3 class="projects-header">Projects</h3>
+                    <ol class="projects-list">
+                        <li>
+                            <a href="https://www.edu.goit.global/ro/courses/" class="projects-name">https://www.edu.goit.global/ro/courses</a>
+                            <span class="projects-info">..........</span>
+                            <span class="projects-info">[ HTML5, CSS3 ]</span>
+                         </li>
+                    </ol>
+                </div> 
+                <div>
+                <h3 class="projects-header">Future Projects</h3>
+                <ol class="projects-list">
+                    
+                    <li>
+                        <a href="https://cryptohub.goit.global/" class="projects-name">https://cryptohub.goit.global/</a>
+                        <span class="projects-info">..........</span>
+                        <span class="projects-info">[ JavaScript ]</span>
+                    </li>
+                    <li>
+                        <a href="https://kidslike.goit.global/" class="projects-name">https://kidslike.goit.global/</a>
+                        <span class="projects-info">..........</span>
+                        <span class="projects-info">[ React.js, Node.js ]</span>
+                    </li>
+                </ol>
+                </div>
+            </details>
+            <!-- work experience section -->
+            <div class="work-experience-container">
+                <h3 class="work-experience-header">Work Experience</h3>
+                <!-- 1st company -->
+                <div class="company-container">
+                    <h4 class="company-name">GoIT 
+                        <span class="company-info">Front-end Developer/online</span>
+                    </h4>
+                    <p class="company-time">June 2023 - up to now   |  Romania</p>
+                    <ul class="company-list">
+                        <li>Development and creation of a site in HTML5 and styling it with CSS</li>
+                    </ul>
+                </div>
+                <!-- 2nd company -->
+                <div class="company-container">
+                   <h4 class="company-name">Constructii civile   
+                       <span class="company-info">Zugrav</span>
+                   </h4>
+                   <p class="company-time">Septembre 2021 - up to now   |   France</p>
+                   <ul class="company-list">
+                      <li>Pregatirea peretilor si tavanelor.</li>
+                      <li>Repartiile, unde e cazul.</li>
+                      <li>Finisarea</li>
+                      <li>Vopsirea peretilor si tavanelor</li>
+                   </ul>
+                </div>
+                <!-- 3rd company -->
+                <div class="company-container">
+                    <h4 class="company-name">Constructii navale   
+                        <span class="company-info">Izolator/Lucrari speciale</span>
+                    </h4>
+                    <p class="company-time">Septembre 2019 - August 2021</p>
+                    <ul class="company-list">
+                        <li>Izolarea interioara a navelor de croaziera.
+                            <p class="company-list-description">Sudatul pinilor, vopsirea, montarea izolatiei si finisarea</p>
+                        </li>
+                        <li>Montarea Floating floor
+                            <p class="company-list-description">Indreptarea podelelor, izolarea lor, urmata de aplicarea a 3 randuri de tabla.</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <!-- Education section -->
+            <div class="education-section">
+                <h3 class="education-header">Education</h3>
+                <div>
+                    <h4 class="university-name">Liceul Tehnologic "Constantin Brancusi"</h4>
+                    <p class="university-profile">Tehnician in Prelucrarea Lemunului</p>
+                    <p class="university-time">September 2017 - June 2022  |  Romania</p>
+                </div>
+                <div>
+                    <h4 class="university-name">GoIT</h4>
+                    <p class="university-profile">Front-end Developer/online</p>
+                    <p class="university-time">June 2023 - up to now    |   Romania</p>
+                </div>
+            </div
         </div>
     </div>
 </body>
