--- a/index.html
+++ b/index.html
@@ -104,8 +104,56 @@
                     <p class="university-profile">Front-end Developer/online</p>
                     <p class="university-time">June 2023 - up to now    |   Romania</p>
                 </div>
-            </div
+
+            </div>
         </div>
+        <!-- Sidebar section -->
+        <aside class="sidebar-section">
+            <img src="images/IMG_5396.JPG" alt="Profile picture" width="370px" class="sidebar-image">
+            <!-- Contacts section -->
+            <div class="contacts-container">
+               <h3 class="contacts-header">Contacts</h3>
+               <div class="contacts-elements">
+                   <span class="contacts-item">C:</span>
+                   <a href="+4072586112" class="contacts-phone">+40725862112</a>
+               </div>
+               <div>
+                   <span class="contacts-item">E:</span>
+                   <a href="lloyd_banks01@yahoo.com" class="contacts-email">lloyd_banks01@yahoo.com</a>
+               </div>
+            </div>
+            <!--Tech skills section  -->
+            <div class="tech-skills-section">
+                <h3 class="tech-skills-header">Future Tech Skills</h3>
+                <ul class="tech-skills-list">
+                    <li>HTML5 <span>..........</span>
+                        <span>in progress</span></li>
+                    <li>CSS3 <span>..........</span>
+                        <span>in progress</span></li>
+                    <li>GIT <span>..........</span>
+                        <span>unearned</span></li>
+                    <li>WebPack <span>..........</span>
+                        <span>unearned</span></li>
+                    <li>JavaScript <span>..........</span>
+                        <span>unearned</span></li>
+                    <li>React.js <span>..........</span>
+                        <span>unearned</span></li>
+                    <li>Node.js <span>..........</span>
+                        <span>unearned</span></li>
+                </ul>
+            </div>
+            <!-- Soft skills section -->
+            <div class="soft-skills-section">
+                <h3 class="soft-skills-header">Soft Skills</h3>
+                <ul class="soft-skills-list">
+                    <li>Teamwork</li>
+                    <li>Agile</li>
+                    <li>Stubborn</li>
+                    <li>Learn Quickly</li>
+                </ul>
+            </div>
+
+        </aside>
     </div>
 </body>
 </html>
